--- a/index.html
+++ b/index.html
@@ -1,7 +1,66 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Sergii's test webpage</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>John Doe - CV</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+      header {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      #name {
+        font-size: 2em;
+      }
+      #photo {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      #bio {
+        margin: 20px auto;
+        max-width: 600px;
+        text-align: center;
+      }
+      #cv-btn {
+        display: block;
+        margin: 20px auto;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        background-color: #333;
+        color: #fff;
+        text-decoration: none;
+        font-weight: bold;
+        transition: all 0.2s ease-in-out;
+      }
+      #cv-btn:hover {
+        background-color: #fff;
+        color: #333;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div id="name">John Doe</div>
+      <div>
+        <img id="photo" src="https://www.example.com/my-photo.jpg" alt="John Doe's photo">
+      </div>
+    </header>
+    <div id="bio">
+      <p>I am a PhD student studying economics. My research interests include...</p>
+      <a id="cv-btn" href="https://www.example.com/my-cv.pdf" target="_blank">View my CV</a>
+    </div>
+  </body>
 </html>
