--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - CV</title>
+    <title>John Doe - my CV</title>
     <style>
       body {
         font-family: Arial, sans-serif;
