--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - my CV</title>
+    <title>John Doe - CV</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -28,7 +28,10 @@
         object-fit: cover;
       }
       #bio {
-        margin: 20px auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         max-width: 600px;
         text-align: center;
       }
