--- a/CV.html
+++ b/CV.html
@@ -183,6 +183,7 @@
           </div>
         </div>
       </div>
+      <div class="u-border-1 u-border-palette-5-light-1 u-expanded-width u-line u-line-horizontal u-line-1"></div>
       <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-5">
         <div class="u-layout">
           <div class="u-layout-row">
@@ -190,7 +191,8 @@
               <div class="u-container-layout u-container-layout-11">
                 <h4 class="u-text u-text-default u-text-22">
                   <span style="font-weight: 700;">Phone</span>
-                  <br>123-456-7890
+                  <br>
+                  <span style="font-size: 1rem;">+1 (812) 671-8404</span>
                 </h4>
               </div>
             </div>
@@ -198,13 +200,14 @@
               <div class="u-container-layout u-container-layout-12">
                 <h3 class="u-text u-text-default u-text-23">
                   <span style="font-weight: 700;">Email</span>
-                  <br>email@email.com
+                  <br>
+                  <span style="font-size: 1rem;">sdrobot@iu.edu</span>
                 </h3>
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-13">
               <div class="u-container-layout u-container-layout-13">
-                <h4 class="u-text u-text-default u-text-24">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="linkedin/adress"><img src="images/61109.png" alt=""></span>&nbsp;<br>
+                <h4 class="u-text u-text-default u-text-24">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
                 </h4>
               </div>
             </div>
@@ -220,7 +223,7 @@
     </section>
     
     
-    <footer class="u-clearfix u-footer u-palette-5-light-3" id="sec-fef6"><div class="u-clearfix u-sheet u-sheet-1"></div></footer>
+    <!--<footer class="u-clearfix u-footer u-palette-5-light-3" id="sec-fef6"><div class="u-clearfix u-sheet u-sheet-1"></div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
         <span>Website Templates</span>
@@ -231,6 +234,6 @@
       <a class="u-link" href="" target="_blank">
         <span>Website Builder Software</span>
       </a>. 
-    </section>
+    </section>-->
   
 </body></html>
