--- a/Research.html
+++ b/Research.html
@@ -59,11 +59,52 @@
         <div class="u-palette-3-base u-preserve-proportions u-shape u-shape-circle u-shape-1"></div>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-b762">
-      <div class="u-clearfix u-sheet u-sheet-1"></div>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-border-1 u-border-palette-5-light-1 u-expanded-width u-line u-line-horizontal u-line-1"></div>
+        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1">
+                  <h4 class="u-text u-text-default u-text-1">
+                    <span style="font-weight: 700;">Phone</span>
+                    <br>
+                    <span style="font-size: 0.875rem;">+1 (812) 671-8404</span>
+                  </h4>
+                </div>
+              </div>
+              <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-2">
+                <div class="u-container-layout u-container-layout-2">
+                  <h3 class="u-text u-text-default u-text-2">
+                    <span style="font-weight: 700;">Email</span>
+                    <br>
+                    <span style="font-size: 1rem;">
+                      <span style="font-size: 0.875rem;">s</span>
+                      <span style="font-size: 0.875rem;">drobot@iu.edu</span>
+                    </span>
+                  </h3>
+                </div>
+              </div>
+              <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-3">
+                <div class="u-container-layout u-container-layout-3">
+                  <h4 class="u-text u-text-default u-text-3">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
+                  </h4>
+                </div>
+              </div>
+              <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-4">
+                <div class="u-container-layout u-container-layout-4">
+                  <h6 class="u-text u-text-default u-text-4">Inspired by wix.com templates<br>Created using Nicepage
+                  </h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     
     
-    <footer class="u-clearfix u-footer u-palette-5-light-3" id="sec-fef6"><div class="u-clearfix u-sheet u-sheet-1"></div></footer>
+    <!--<footer class="u-clearfix u-footer u-palette-5-light-3" id="sec-fef6"><div class="u-clearfix u-sheet u-sheet-1"></div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
         <span>Website Templates</span>
@@ -74,6 +115,6 @@
       <a class="u-link" href="" target="_blank">
         <span>Website Builder Software</span>
       </a>. 
-    </section>
+    </section>-->
   
 </body></html>
