--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!--<footer class="u-clearfix u-footer u-palette-5-light-3" id="sec-fef6"><div class="u-clearfix u-sheet u-sheet-1"></div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templatesss</span>
+        <span>Website Templates</span>
       </a>
       <p class="u-text">
         <span>created with</span>
