--- a/CV.html
+++ b/CV.html
@@ -207,7 +207,7 @@
             </div>
             <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-13">
               <div class="u-container-layout u-container-layout-13">
-                <h4 class="u-text u-text-default u-text-24">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
+                <h4 class="u-text u-text-default u-text-24">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="https://www.linkedin.com/in/sdrobot/" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
                 </h4>
               </div>
             </div>
