--- a/CV.html
+++ b/CV.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="en"><head>
+<html style="font-size: 16px;" lang="en-US"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Curriculum Vitae​">
@@ -18,12 +18,15 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": ""
+		"name": "Sergii Drobot"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="CV">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+  <meta name="description" content="Sergii Drobot – Ph.D. candidate in Economics at Indiana University Bloomington. Research in behavioral macroeconomics, inflation expectations, and media.">
+<meta name="author" content="Sergii Drobot">
+<meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-4bd8"><div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font u-font-roboto" style="font-size: 1rem; letter-spacing: 0px;">
@@ -55,15 +58,15 @@
           </div>
         </nav>
         <h4 class="u-text u-text-default u-text-1">Se<span style="font-weight: 700;"></span>rgii Drobot&nbsp;&nbsp;<span style="font-weight: 400;">
-            <span style="font-size: 1.125rem;"> PhD Student</span>
+            <span style="font-size: 1.125rem;"> PhD Candidate</span>
           </span>
         </h4>
         <div class="u-palette-3-base u-preserve-proportions u-shape u-shape-circle u-shape-1"></div>
       </div></header>
-    <section class="u-clearfix u-grey-5 u-section-1" id="sec-28e8">
+    <section class="u-clearfix u-grey-5 u-valign-bottom u-section-1" id="sec-28e8">
       <h2 class="u-text u-text-default u-text-1">Curriculum Vitae<span style="font-weight: 700;"></span>
       </h2>
-      <a href="files/Drobot-Sergii_CV.pdf" class="u-active-none u-border-2 u-border-active-palette-2-dark-1 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-button-style u-file-link u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-1" target="_blank">PDF</a>
+      <a href="files/Drobot_Sergii_CV.pdf" class="u-active-none u-border-2 u-border-active-palette-2-dark-1 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-button-style u-file-link u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-1" target="_blank">PDF</a>
       <div class="data-layout-selected u-clearfix u-gutter-0 u-layout-custom-sm u-layout-custom-xs u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
           <div class="u-layout-row">
@@ -110,11 +113,11 @@
             <div class="u-container-style u-layout-cell u-size-34-xl u-size-36-lg u-size-41-md u-size-42-sm u-size-42-xs u-layout-cell-5">
               <div class="u-container-layout u-container-layout-5">
                 <p class="u-custom-font u-font-roboto u-text u-text-10"><b>Teaching Instructor</b>
-                  <br> Statistical Analysis for Business and Economics (Spring 2022, Spring 2023), Fundamentals of Economics for Business II (Fall 2022), Money and Banking (Fall 2023, Spring 2024)<br>
+                  <br> Statistical Analysis for Business and Economics (Spring 2022, Spring 2023, Summer 2025), Fundamentals of Economics for Business II (Fall 2022), Money and Banking (Fall 2023, Spring 2024)<br>
                   <br>
                 </p>
                 <p class="u-custom-font u-font-roboto u-text u-text-11"><b>Graduate Assistant</b>
-                  <br> Fundamentals of Economics for Business I (Spring 2021, Fall 2021, Summer 2023, Fall 2024), Everyday Economics (Fall 2020)<br>
+                  <br> Statistical Analysis for Business and Economics (Summer 2024, Fall 2024), Fundamentals of Economics for Business I (Spring 2021, Fall 2021, Summer 2023), Everyday Economics (Fall 2020)<br>
                   <br>
                 </p>
                 <p class="u-custom-font u-font-roboto u-text u-text-12"><b>Research Assistant</b>
@@ -172,7 +175,7 @@
               <div class="u-container-layout u-container-layout-10">
                 <ul class="u-spacing-8 u-text u-text-default u-text-21">
                   <li> Lloyd Orr Dissertation Fellowship (Indiana University)&nbsp;</li>
-                  <li>Don Lavoie Fellowship (Mercatus Center)&nbsp;</li>
+                  <li>Don Lavoie Fellowship,&nbsp;Adam Smith Fellowship (Mercatus Center)&nbsp;</li>
                   <li>Best Graduate Paper Award (Hoosier Economic Conference)</li>
                   <li>Center for Applied Economics and Policy Research (Indiana University) Travel Award</li>
                   <li>The Robert F. Byrnes Russian and East European Institute Fellowship, Indiana University (Summer 2022)</li>
@@ -189,33 +192,24 @@
       <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-5">
         <div class="u-layout">
           <div class="u-layout-row">
-            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-11">
+            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-11">
               <div class="u-container-layout u-container-layout-11">
-                <h4 class="u-text u-text-default u-text-22">
-                  <span style="font-weight: 700;">Phone</span>
-                  <br>
-                  <span style="font-size: 1rem;">+1 (812) 671-8404</span>
-                </h4>
-              </div>
-            </div>
-            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-12">
-              <div class="u-container-layout u-container-layout-12">
-                <h3 class="u-text u-text-default u-text-23">
+                <h3 class="u-text u-text-default u-text-22">
                   <span style="font-weight: 700;">Email</span>
                   <br>
                   <span style="font-size: 1rem;">sdrobot@iu.edu</span>
                 </h3>
               </div>
             </div>
-            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-13">
-              <div class="u-container-layout u-container-layout-13">
-                <h4 class="u-text u-text-default u-text-24">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="https://www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
+            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-12">
+              <div class="u-container-layout u-container-layout-12">
+                <h4 class="u-text u-text-default u-text-23">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
                 </h4>
               </div>
             </div>
-            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-14">
-              <div class="u-container-layout u-container-layout-14">
-                <h6 class="u-text u-text-default u-text-25">Inspired by wix.com templates<br>Created using Nicepage
+            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-13">
+              <div class="u-container-layout u-container-layout-13">
+                <h6 class="u-text u-text-default u-text-24">Inspired by wix.com templates<br>Created using Nicepage
                 </h6>
               </div>
             </div>
