--- a/Teaching.html
+++ b/Teaching.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="en"><head>
+<html style="font-size: 16px;" lang="en-US"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Curriculum Vitae​">
@@ -18,12 +18,15 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": ""
+		"name": "Sergii Drobot"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Teaching">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+  <meta name="description" content="Sergii Drobot – Ph.D. candidate in Economics at Indiana University Bloomington. Research in behavioral macroeconomics, inflation expectations, and media.">
+<meta name="author" content="Sergii Drobot">
+<meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-4bd8"><div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font u-font-roboto" style="font-size: 1rem; letter-spacing: 0px;">
@@ -55,7 +58,7 @@
           </div>
         </nav>
         <h4 class="u-text u-text-default u-text-1">Se<span style="font-weight: 700;"></span>rgii Drobot&nbsp;&nbsp;<span style="font-weight: 400;">
-            <span style="font-size: 1.125rem;"> PhD Student</span>
+            <span style="font-size: 1.125rem;"> PhD Candidate</span>
           </span>
         </h4>
         <div class="u-palette-3-base u-preserve-proportions u-shape u-shape-circle u-shape-1"></div>
@@ -65,27 +68,35 @@
         <h2 class="u-text u-text-default u-text-1">Teaching<span style="font-weight: 700;"></span>
         </h2>
         <div class="data-layout-selected u-clearfix u-expanded-width u-gutter-0 u-layout-custom-sm u-layout-custom-xs u-layout-wrap u-layout-wrap-1">
-          <div class="u-layout">
-            <div class="u-layout-row">
+          <div class="u-layout" style="">
+            <div class="u-layout-row" style="">
               <div class="u-container-style u-layout-cell u-size-26 u-layout-cell-1">
                 <div class="u-container-layout u-valign-top u-container-layout-1">
                   <h4 class="u-text u-text-default u-text-2">
                     <span style="font-size: 1.25rem;">E370:</span>
                     <br>
-                    <span style="font-size: 0.875rem;">Statistical Analysis for Business and Economics&nbsp;</span>
+                    <span style="font-size: 0.875rem;">Statistical Analysis for Business and Economics<br>
+                      <span style="font-weight: 400;">(Spring&nbsp;2022, Spring 2023, Summer 2025)</span>
+                    </span>
                   </h4>
                   <h4 class="u-text u-text-default u-text-3">
                     <span style="font-size: 1.25rem;">B252:</span>
                     <br>
+                    <span style="font-size: 0.875rem;">Fundamentals of Economics for Business II</span>
+                    <br>
                     <span style="font-size: 1.125rem;">
-                      <span style="font-size: 0.875rem;">Fundamentals of Economics for Business II</span>&nbsp;
+                      <span style="font-weight: 400;"></span>
                     </span>
+                    <span style="font-weight: 400; font-size: 0.875rem;">(Fall 2022)</span>
                   </h4>
                   <h4 class="u-text u-text-default u-text-4">
                     <span style="font-size: 1.25rem;">E305:</span>
                     <br>
                     <span style="font-size: 14px;">Money and Banking</span>
-                    <span style="font-size: 1.125rem;">&nbsp;</span>
+                    <span style="font-size: 1.125rem;">
+                      <br>
+                      <span style="font-weight: 400; font-size: 0.875rem;">(Fall 2023, Spring 2024)</span>&nbsp;
+                    </span>
                   </h4>
                 </div>
               </div>
@@ -109,33 +120,24 @@
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-2">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-3">
-                <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-3">
-                  <h4 class="u-text u-text-default u-text-8">
-                    <span style="font-weight: 700;">Phone</span>
-                    <br>
-                    <span style="font-size: 0.875rem;">+1 (812) 671-8404</span>
-                  </h4>
-                </div>
-              </div>
-              <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-4">
-                <div class="u-container-layout u-container-layout-4">
-                  <h3 class="u-text u-text-default u-text-9">
+              <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-3">
+                <div class="u-container-layout u-container-layout-3">
+                  <h3 class="u-text u-text-default u-text-8">
                     <span style="font-weight: 700;">Email</span>
                     <br>
                     <span style="font-size: 0.875rem;">sdrobot@iu.edu</span>
                   </h3>
                 </div>
               </div>
-              <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-5">
-                <div class="u-container-layout u-container-layout-5">
-                  <h4 class="u-text u-text-default u-text-10">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="https://www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
+              <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-4">
+                <div class="u-container-layout u-container-layout-4">
+                  <h4 class="u-text u-text-default u-text-9">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
                   </h4>
                 </div>
               </div>
-              <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-6">
-                <div class="u-container-layout u-container-layout-6">
-                  <h6 class="u-text u-text-default u-text-11">Inspired by wix.com templates<br>Created using Nicepage
+              <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-5">
+                <div class="u-container-layout u-container-layout-5">
+                  <h6 class="u-text u-text-default u-text-10">Inspired by wix.com templates<br>Created using Nicepage
                   </h6>
                 </div>
               </div>
