--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="en"><head>
+<html style="font-size: 16px;" lang="en-US"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="sergii drobot, phd, economics, econ, expectations, inflation, indiana university, bloomington, iu, incentives, news, media">
     <meta name="description" content="">
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -18,12 +18,15 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": ""
+		"name": "Sergii Drobot"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+  <meta name="description" content="Sergii Drobot – Ph.D. candidate in Economics at Indiana University Bloomington. Research in behavioral macroeconomics, inflation expectations, and media.">
+<meta name="author" content="Sergii Drobot">
+<meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-4bd8"><div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font u-font-roboto" style="font-size: 1rem; letter-spacing: 0px;">
@@ -55,51 +58,43 @@
           </div>
         </nav>
         <h4 class="u-text u-text-default u-text-1">Se<span style="font-weight: 700;"></span>rgii Drobot&nbsp;&nbsp;<span style="font-weight: 400;">
-            <span style="font-size: 1.125rem;"> PhD Student</span>
+            <span style="font-size: 1.125rem;"> PhD Candidate</span>
           </span>
         </h4>
         <div class="u-palette-3-base u-preserve-proportions u-shape u-shape-circle u-shape-1"></div>
       </div></header>
     <section class="u-clearfix u-custom-color-1 u-section-1" id="sec-79bc">
-      <img class="u-image u-image-circle u-image-1" src="images/6E46CAE9-C7C5-48D8-BA6D-3224E0F4FC17_1_101_o.jpeg" alt="" data-image-width="1242" data-image-height="2688" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">
+      <img class="u-image u-image-circle u-image-1" src="images/DFD6112E-FB29-452C-98E5-2D685CFC5AB5.jpeg" alt="" data-image-width="640" data-image-height="640" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">
       <p class="u-custom-font u-font-roboto u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
         <span style="font-weight: 700; font-size: 3rem;">Sergii Drobot</span>
         <br>
         <br>
         <span style="font-size: 1.5rem; font-weight: 700;">About Me</span>
-        <br>I am a PhD candidate at Indiana University Bloomington, working on topics in macroeconomics, such as monetary policy and the formation of expectations.<br>
+        <br> I am a Ph.D. candidate in Economics at Indiana University Bloomington, specializing in behavioral macroeconomics. My research focuses on the role of news media in shaping household inflation expectations and how incentives influence forecasting behavior. I employ machine learning techniques, textual analysis, and survey experiments in my work.<br>
+        <br>I am on the 2024-2026 academic job market.&nbsp; &nbsp;<br>
       </p>
       <div class="u-border-1 u-border-palette-5-light-2 u-expanded-width u-line u-line-horizontal u-line-1"></div>
       <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
           <div class="u-layout-row">
-            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-1">
+            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-1">
               <div class="u-container-layout u-container-layout-1">
-                <h4 class="u-text u-text-default u-text-2">
-                  <span style="font-weight: 700;">Phone</span>
-                  <br>
-                  <span style="font-size: 16px;">+1 (812) 671-8404</span>
-                </h4>
-              </div>
-            </div>
-            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-2">
-              <div class="u-container-layout u-container-layout-2">
-                <h3 class="u-text u-text-default u-text-3">
+                <h3 class="u-text u-text-default u-text-2">
                   <span style="font-weight: 700;">Email</span>
                   <br>
                   <span style="font-size: 1rem;">sdrobot@iu.edu</span>
                 </h3>
               </div>
             </div>
-            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-3">
-              <div class="u-container-layout u-container-layout-3">
-                <h4 class="u-text u-text-default u-text-4">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="https://www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
+            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
+              <div class="u-container-layout u-container-layout-2">
+                <h4 class="u-text u-text-default u-text-3">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
                 </h4>
               </div>
             </div>
-            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-4">
-              <div class="u-container-layout u-container-layout-4">
-                <h6 class="u-text u-text-default u-text-5">Inspired by wix.com templates<br>Created using Nicepage
+            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-3">
+              <div class="u-container-layout u-container-layout-3">
+                <h6 class="u-text u-text-default u-text-4">Inspired by wix.com templates<br>Created using Nicepage
                 </h6>
               </div>
             </div>
