--- a/Teaching.html
+++ b/Teaching.html
@@ -79,7 +79,7 @@
                       <span style="font-weight: 400;">(Spring&nbsp;2022, Spring 2023, Summer 2025)</span>
                     </span>
                   </h4>
-                  <h4 class="u-text u-text-default u-text-3">
+                  <h4 class="u-text u-text-default-lg u-text-default-xl u-text-3">
                     <span style="font-size: 1.25rem;">B252:</span>
                     <br>
                     <span style="font-size: 0.875rem;">Fundamentals of Economics for Business II</span>
@@ -146,7 +146,6 @@
         </div>
       </div>
     </section>
-    
-    
+  
   
 </body></html>
