--- a/Research.html
+++ b/Research.html
@@ -109,7 +109,7 @@
               </div>
               <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <h4 class="u-text u-text-default u-text-2">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="www.linkedin.com/in/sdrobot" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
+                  <h4 class="u-text u-text-default u-text-2">&nbsp;Follow Me<br>&nbsp;<span class="u-file-icon u-icon u-icon-1" data-href="https://www.linkedin.com/in/sdrobot/" data-target="_blank"><img src="images/61109.png" alt=""></span>&nbsp;<br>
                   </h4>
                 </div>
               </div>
