--- a/Research.html
+++ b/Research.html
@@ -89,10 +89,10 @@
         </p>
         <h2 class="u-text u-text-default u-text-5">Work-in-Progress:</h2>
         <p class="u-custom-font u-font-roboto u-text u-text-6"><b></b><span style="font-weight: 700;">A penny for your thoughts? Incentive design and inflation expectations elicitation <span style="font-weight: 400;">with <a href="https://sites.google.com/view/daniela-puzzello/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-7" target="_blank">Daniela Puzzello</a>, <a href="https://sites.google.com/view/ryanrholes/home" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-8" target="_blank">Ryan Rholes</a>, <a href="https://www.daniela-valdivia.com/about" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-9" target="_blank">Daniela Valdivia</a>, <a href="https://www.alenawabitsch.eu" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-10" target="_blank">Alena Wabitsch</a></span>
-        <br>
-            <br>Choosing Digital Currency Design</span>&nbsp;with<a href="https://sites.google.com/view/daniela-puzzello/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-7" target="_blank">Daniela Puzzello</a>
+        	    <br>
+            <br><span style="font-weight: 700;">Choosing Digital Currency Design</span>&nbsp;with<a href="https://sites.google.com/view/daniela-puzzello/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-7" target="_blank">Daniela Puzzello</a>
             <br>
-            <br>Misperception or Misconception? Dissonance in Households’ Inflation Forecasts</span>&nbsp;with <a href="https://sites.google.com/view/nykang/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-11" target="_blank">Nayeon Kang</a>
+            <br><span style="font-weight: 700;">Misperception or Misconception? Dissonance in Households’ Inflation Forecasts</span>&nbsp;with <a href="https://sites.google.com/view/nykang/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-11" target="_blank">Nayeon Kang</a>
         </p>
       </div>
     </section>
