--- a/Research.html
+++ b/Research.html
@@ -83,7 +83,9 @@
           <br>
         </p>
         <p class="u-custom-font u-font-roboto u-text u-text-4"><b></b><span style="font-weight: 700;">Forecasting the Future Through a Partisan Lens: Electoral Outcomes and Household&nbsp;Expectations</span><b>&nbsp;<span style="font-weight: 400;"> with <a href="https://sites.google.com/view/nykang/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-6" target="_blank">Nayeon Kang</a></span></b>
-          <br>(Draft available upon request)<br>
+          <br>
+          <a href="https://nykangeocn.github.io/Research/Forecasting%20the%20Future%20Through%20a%20Partisan%20Lens.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-5" target="_blank">Link</a>
+          <br>
           <br><span style="font-size: 0.875rem;">Political partisanship shapes the economic expectations of U.S. households. To examine how electoral outcomes influence forecasts of inflation and unemployment, we conducted a two-wave survey, with the second wave on the morning of November 6, 2024, immediately after the presidential election. Democrats revised their expectations more pessimistically, raising projected inflation and unemployment. Republicans, despite largely anticipating a Trump victory, still revised forecasts more optimistically, often projecting deflation, which most respondents view as favorable. Forecast disagreement narrowed among Republicans but widened among Democrats. To support the empirics, we present an expectations-formation framework where perceived signals are influenced by political bias. We simulate respondent-like personas with a constrained LLM to assess external validity. It recovers the pre-election partisan gap and rapid updating but misses Republicans’ downward revision and dispersion.</span>
           <br>
         </p>
